<resources>
    <!-- Demo -->
    <string name="app_name">lab2</string>
    <string name="txt1">Hello, Android!</string>
    <string name="title" translatable="false">Timetable for HSE FE</string>
    <string name="btn1" translatable="false">BUTTON1</string>
    <string name="btn2" translatable="false">BUTTON2</string>
    <string name="input_text" translatable="false">100000</string>
    <string name="result" translatable="false">Result</string>

    <!-- Base -->
    <string name="title_base" translatable="false">Timetable for HSE FE</string>
    <string name="table_stud" translatable="false">РАСПИСАНИЕ ДЛЯ СТУДЕНТОВ</string>
    <string name="table_teach" translatable="false">РАСПИСАНИЕ ДЛЯ ПРЕПОДАВАТЕЛЯ</string>
    <string name="logo" translatable="false">HSE Logo Image</string>
    <string name="get_table_stud" translatable="false">Расписание занятий для студентов</string>
    <string name="get_table_teach" translatable="false">Расписание занятий для преподавателя</string>
    <string name="choose_group" translatable="false">Выберите группу:</string>
    <string name="choose_teacher" translatable="false">Выберите преподавателя:</string>
    <string name="timeNow" translatable="false">Сейчас:\t</string>
    <string name="currStatus" translatable="false">Идет пара / Нет пар</string>
    <string name="subject" translatable="false">Дисциплина</string>
    <string name="cabinet" translatable="false">Кабинет</string>
    <string name="corp" translatable="false">Корпус</string>
    <string name="teacher" translatable="false">Преподаватель</string>
    <string name="dayTable" translatable="false">РАСПИСАНИЕ\nНА ДЕНЬ</string>
    <string name="weekTable" translatable="false">РАСПИСАНИЕ\nНА НЕДЕЛЮ</string>
</resources>