<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_student">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InnerText"
            android:text="@string/choose_group"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"/>
        <Spinner
            android:id="@+id/groupList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/InnerText"
                android:text="@string/timeNow"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InnerText"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InnerText"
            android:text="@string/currStatus"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InnerText"
                android:text="@string/subject"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/cabinet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InnerText"
                android:text="@string/cabinet"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/corp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InnerText"
                android:text="@string/corp"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InnerText"
                android:text="@string/teacher"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                style="@style/InnerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dayTable"
                android:layout_marginRight="10dp"/>
            <Button
                style="@style/InnerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekTable"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>