<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseActivity">

    <!-- Toolbar  -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_base"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical" />

    </androidx.appcompat.widget.Toolbar>

    <!-- HSE Image -->
    <ImageView
        android:id="@+id/hseImage"
        android:contentDescription="@string/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.6"/>

    <!-- Buttons layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <!-- Table button for students -->
        <Button
            android:id="@+id/tableStudents"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/table_stud"
            android:textSize="14sp"
            android:background="@drawable/rectangle_button"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="300dp"/>

        <!-- Table button for teacher -->
        <Button
            android:id="@+id/tableTeacher"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/table_teach"
            android:textSize="14sp"
            android:background="@drawable/rectangle_button"
            android:layout_marginTop="30dp"
            android:elevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/tableStudents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="300dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>